# piLispMachine

./: .gitignore  Makefile  README.md  cmEdit.cpp  edit.cpp  edit.h  editor.cpp  editor.h  kernel.cpp  kernel.d  kernel.h  kernel8-rpi4.elf  kernel8-rpi4.img  kernel8-rpi4.map  kernel8.img  lisp.cpp  lisp.h  main.cpp  main.d  rustTest.rs  util.cpp  util.h
configFile/: Genesis.md  Rules.mk
game/: README.md  header
game/TicTacToe/: TicTacToe.cpp  TicTacToe.h
game/gnugo/: ChangeLog  Documentation  Makefile  README  count.c  countlib.c  endgame.c  eval.c  exambord.c  findcolr.c  findnext.c  findopen.c  findpatn.c  findsavr.c  findwinr.c  fioe.c  genmove.c  getij.c  getmove.c  gnugo.c  gnugo.h  gnugo.mak  initmark.c  matchpat.c  objs  opening.c  openregn.c  patterns.h  sethand.c  showbord.c  showinst.c  suicide.c
game/gnugo2/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  WINDOWS  acconfig.h  aclocal.m4  config.cache  config.h  config.h.in  config.status  config.vc  config.vcin  configure  configure.in  gnugo.dsw
game/gnugo2/doc/: Makefile  Makefile.am  Makefile.in  analyze.texi  copying.texi  dragon.texi  endgame.texi  eyes.texi  gnugo.eps  gnugo.texi  introduction.texi  moyo.texi  overview.texi  patterns.texi  reading.texi  regression.texi  using.texi  utils.texi
game/gnugo2/engine/: Makefile  Makefile.am  Makefile.in  attdef.c  dragon.c  filllib.c  fuseki.c  genmove.c  globals.c  gnugo.dsp  hash.c  hash.h  liberty.h  main.h  matchpat.c  moyo.c  optics.c  reading.c  semeai.c  sethand.c  shapes.c  showbord.c  utils.c  worm.c
game/gnugo2/interface/: Makefile  Makefile.am  Makefile.in  gmp.c  gnugo  gnugo.el  gnugo2.6.c  interface.c  interface.dsp  interface.h  play_ascii.c  play_gmp.c  play_solo.c  play_test.c
game/gnugo2/interface/html/: README
game/gnugo2/patterns/: Makefile  Makefile.am  Makefile.in  README  conn.c  conn.db  connections.c  eyes.c  eyes.db  eyes.h  fuseki2.sgf  helpers.c  hoshi.db  hoshi.sgf  joseki  joseki.c  joseki.dsp  komoku.db  komoku.sgf  mkeyes  mkeyes.c  mkeyes.dsp  mkpat  mkpat.c  mkpat.dsp  mokuhazushi.db  mokuhazushi.sgf  patterns.c  patterns.db  patterns.dsp  patterns.h  sansan.db  sansan.sgf  takamoku.db  takamoku.sgf
game/gnugo2/regression/: README  gnugo_gnugo.sgf  nils_gnugo.sgf  regress.sh  test-C100.sgf
game/gnugo2/sgf/: Makefile  Makefile.am  Makefile.in  sgf.c  sgf.dsp  sgf.h  sgf_extras.def  sgf_properties.h  sgf_utils.c  sgf_utils.h  sgfana.c  sgfana.h  sgfgen  sgfgen.c  sgfgen.dsp  ttsgf.c  ttsgf.h  ttsgf_read.c  ttsgf_read.h  ttsgf_write.c  ttsgf_write.h
game/gnugo2/utils/: Makefile  Makefile.am  Makefile.in  README  getopt.c  utils.dsp
game/gnugo2/win/: makefile.win  makeit.bat
out-of-the-box/: kernel8.img
