## Process this file with automake to create Makefile.in
AUTOMAKE_OPTIONS=no-dependencies

info_TEXINFOS = gnugo.texi

gnugo_TEXINFOS = analyze.texi gnugo.texi overview.texi regression.texi \
	   dragon.texi introduction.texi patterns.texi endgame.texi \
	   reading.texi eyes.texi moyo.texi using.texi \
	   utils.texi copying.texi texinfo.tex

man_MANS = gnugo.6

EXTRA_DIST = automake-1.4.patch gnugo.6 gnugo.jpg gnugo.eps

CLEANFILES = *.log *.dvi *.info

